@@ -121,13 +121,23 @@ cache_param_t * search_cacheBycsn( int csn, cachelist_param_t *cachelist);
 
 
 /**
- * search codestream number (csn) by cid
+ * search a cache by cid
  *
  * @param[in] cid        channel identifer
  * @param[in] cachelist  cache list pointer
  * @return               found cache pointer
  */
 cache_param_t * search_cacheBycid( char cid[], cachelist_param_t *cachelist);
+
+
+/**
+ * search a cache by tid
+ *
+ * @param[in] tid        target identifer
+ * @param[in] cachelist  cache list pointer
+ * @return               found cache pointer
+ */
+cache_param_t * search_cacheBytid( char tid[], cachelist_param_t *cachelist);
 
 /**
  * add cid into a cache
