@@ -5,6 +5,12 @@ What's New for OpenJPIP
 ! : changed
 + : added
 
+September 16, 2011
++ [kaori] enabled stateless requests from the opj_viewers
+
+Septempber 1, 2011
+* [kaori] changed terminating status of opj_server in debug/non-server mode
+
 August 27, 2011
 * [antonin] fixed missing include directory in opj_client/opj_dec_server/CMakeLists.txt
 
